Fix overflow in boxes heading

--- a/server/public/less/box.less
+++ b/server/public/less/box.less
@@ -32,6 +32,9 @@
 		margin: 0 0 12px 0;
 		line-height: 24px;
 		height: 24px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 	}
 
 	#wrapper {
